--- a/estilo/style.css
+++ b/estilo/style.css
@@ -44,8 +44,7 @@ iframe#tela {
 section#redes-sociais{
     text-align: right;
 }
-
-section#redes-sociais img {
+img {
     width: 50px;
     margin: 10px;
     border-radius: 50%;
